--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="_/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 	
 
 <head>
